[package]
name = "blastmud_game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.20.0"
blastmud_interfaces = { path = "../blastmud_interfaces" }
ansi = { path = "../ansi" }
deadpool = "0.9.5"
deadpool-postgres = { version = "0.10.3", features = ["serde"] }
futures = "0.3.25"
log = "0.4.17"
nix = "0.26.1"
ring = "0.16.20"
serde = { version = "1.0.150", features = ["derive", "serde_derive"] }
serde_yaml = "0.9.14"
simple_logger = "4.0.0"
tokio = { version = "1.23.0", features = ["signal", "net", "macros", "rt-multi-thread", "rt", "tokio-macros", "time", "sync", "io-util"] }
tokio-postgres = { version = "0.7.7", features = ["with-uuid-1", "with-serde_json-1"] }
tokio-serde = { version = "0.8.0", features = ["serde", "serde_cbor", "cbor"] }
tokio-stream = "0.1.11"
tokio-util = { version = "0.7.4", features = ["codec"] }
uuid = { version = "1.2.2", features = ["v4", "serde", "rng"] }
serde_json = "1.0.91"
phf = { version = "0.11.1", features = ["macros"] }
async-trait = "0.1.60"
nom = "7.1.1"
ouroboros = "0.15.5"
chrono = { version = "0.4.23", features = ["serde"] }
bcrypt = "0.13.0"
validator = "0.16.0"
itertools = "0.10.5"
once_cell = "1.16.0"
rand = "0.8.5"
