[package]
name = "blastmud_interfaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.149", features = ["derive", "serde_derive"] }
uuid = { version = "1.2.2", features = ["serde"] }
