[package]
name = "blastmud_listener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blastmud_interfaces = { path = "../blastmud_interfaces" }
futures = "0.3.25"
log = "0.4.17"
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive", "serde_derive"] }
serde_yaml = "0.9.14"
simple_logger = "4.0.0"
tokio = { version = "1.23.0", features = ["signal", "net", "macros", "rt-multi-thread", "rt", "tokio-macros", "time", "sync"] }
tokio-serde = { version = "0.8.0", features = ["cbor", "serde", "serde_cbor"] }
tokio-util = { version = "0.7.4", features = ["codec"] }
